--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,14 +4,56 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+<ion-content>
+  
+  <ion-slides #slides>
+
+    <ion-slide class="start-slide">
+      <ion-item>
+        <ion-label floating>Nome</ion-label>
+        <ion-input type="text" [(ngModel)]="userName"></ion-input>
+      </ion-item>
+
+      <button ion-button color="primary" (click)="nextSlide()">Começar!</button>
+    </ion-slide>
+
+    <ion-slide *ngFor="let question of questions; let i = index;">
+
+      <h3>Question {{ i + 1 }}</h3>
+
+      <flash-card [isFlipped]="question.flashCardFlipped">
+        <div class="flash-card-front" [innerHTML]="question.flashCardFront"></div>
+        <div class="flash-card-back" [innerHTML]="question.flashCardBack"></div>
+      </flash-card>
+
+      <h3>{{ question.questionText }}</h3>
+
+      <ion-list no-lines radio-group>
+
+        <ion-item class="answers" *ngFor="let answer of question.answers; let i = index;">
+          <ion-label>{{ i + 1 }}. {{ answer.answer }}</ion-label>
+          <ion-radio (click)="selectAnswer(answer, question)" [checked]="answer.selected" [disabled]="answer.hasAnswered"></ion-radio>
+        </ion-item>
+
+      </ion-list>
+
+    </ion-slide>
+
+    <ion-slide class="last-slide">
+      <h2>
+        Jogador {{ userName }}
+      </h2>
+
+      <h3>
+        Corretas: {{ correctAnswers }}
+        <br>
+        Incorretas: {{ wrongAnswers}}
+      </h3>
+      <h3></h3>
+
+      <button (click)="restartQuiz()" ion-button full color="primary">Start Again</button>
+    </ion-slide>
+
+  </ion-slides>
+
 </ion-content>
